<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="uk.co.ifsoft.notes.SignupActivity"
    android:background="@color/white">

    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="@drawable/actionbar"
        app:theme="@style/ThemeOverlay.AppCompat.Light"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:background="@color/white">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp" >
<!-- 
            <com.facebook.login.widget.LoginButton
                xmlns:fb="http://schemas.android.com/apk/res-auto"
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                fb:login_text="@string/action_signup_with_facebook"
                fb:logout_text="@string/action_signup_with_facebook"
                android:padding="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginBottom="20dp" />
-->
     

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/placeholder_login"
                android:ems="10"
                android:layout_marginTop="10dp"
                android:maxLength="24"
                android:id="@+id/signupUsername" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:hint="@string/placeholder_password"
                android:id="@+id/signupPassword"
                android:layout_marginTop="10dp"
                android:maxLength="20"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/placeholder_email"
                android:ems="10"
                android:maxLength="40"
                android:layout_marginTop="10dp"
                android:id="@+id/signupEmail" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_label_1"
                android:id="@+id/textView1"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_label_terms_and_policies"
                android:id="@+id/signup_label_terms"
                android:layout_marginTop="5dp"
                android:textColor="@color/light_blue" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_signup"
                android:id="@+id/signupJoinHowBtn"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:stateListAnimator="@null"
                android:background="@drawable/button_blue"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
